367-IX. Про внесення змін до деяких законодавчих актів України щодо зменшення тиску на бізнес з боку органів ринкового нагляду

--- a/Закони/Про_загальну_безпечність_нехарчової_продукції.md
+++ b/Закони/Про_загальну_безпечність_нехарчової_продукції.md
@@ -85,9 +85,13 @@
 
     11) вироби військового призначення;
 
-    12) об'єкти містобудування;
+    12) об’єкти будівництва, визначені Законом України "Про регулювання містобудівної діяльності;
 
-    13) продукцію, що була у вжитку, поставлена як предмет антикваріату або як продукція, що підлягає ремонту чи відновленню перед її використанням, за умови, що постачальник надає інформацію особі, якій ця продукція постачається, про необхідність її ремонту чи відновлення.
+    13) продукцію, що була у вжитку, поставлена як предмет антикваріату або як продукція, що підлягає ремонту чи відновленню перед її використанням, за умови, що постачальник надає інформацію особі, якій ця продукція постачається, про необхідність її ремонту чи відновлення;
+
+    14) об’єкти авіаційної діяльності;
+
+    15) дорогоцінні метали, дорогоцінне каміння, дорогоцінне каміння органогенного утворення та напівдорогоцінне каміння, вироби з них (ювелірні та побутові) та матеріали, що їх містять.
 
 4. Діяльність у сфері забезпечення безпечності продукції, зазначеної в частині третій цієї статті, здійснюється відповідно до законодавства.
 
@@ -247,7 +251,7 @@
 
 **Стаття 13.** Система оперативного взаємного сповіщення про продукцію, що становить серйозний ризик
 
-1. З метою обміну між органами виконавчої влади інформацією про продукцію, що становить серйозний ризик, створюється та функціонує система оперативного взаємного сповіщення про продукцію, що становить серйозний ризик.
+1. З метою інформування громадськості та обміну між органами виконавчої влади інформацією про продукцію, що становить серйозний ризик, створюється та функціонує система оперативного взаємного сповіщення про продукцію, що становить серйозний ризик.
 
 2. Система оперативного взаємного сповіщення про продукцію, що становить серйозний ризик, формується з повідомлень, що подаються органами державного ринкового нагляду у разі виявлення ними продукції, що становить серйозний ризик.
 
@@ -286,29 +290,31 @@
 
 1. Відповідальність за порушення вимог цього Закону встановлюється цим та іншими законами України.
 
-2. До виробника застосовуються штрафні санкції у разі:
+2. До виробника застосовуються адміністративно-господарські санкції у вигляді штрафу в разі:
 
-    1) введення ним в обіг небезпечної нехарчової продукції - у розмірі від тисячі п'ятисот до трьох тисяч неоподатковуваних мінімумів доходів громадян, а за повторне протягом трьох років вчинення такого самого порушення, за яке на нього вже було накладено штраф, - у розмірі від двох тисяч п'ятисот до п'яти тисяч неоподатковуваних мінімумів доходів громадян;
+    1) введення ним в обіг небезпечної нехарчової продукції - у розмірі шести тисяч неоподатковуваних мінімумів доходів громадян, а за повторне протягом трьох років вчинення такого самого порушення, за яке на нього вже було накладено штраф, - у розмірі двадцяти тисяч неоподатковуваних мінімумів доходів громадян;
 
-    2) невиконання вимог, встановлених пунктом 5 частини першої статті 8 цього Закону, - у розмірі від семисот п'ятдесяти до тисячі п'ятисот неоподатковуваних мінімумів доходів громадян, а за повторне протягом трьох років вчинення такого самого порушення, за яке на нього вже було накладено штраф, - у розмірі від тисячі п'ятисот до трьох тисяч неоподатковуваних мінімумів доходів громадян.
+    2) невиконання вимог, встановлених пунктом 5 частини першої статті 8 цього Закону, - у розмірі трьох тисяч неоподатковуваних мінімумів доходів громадян, а за повторне протягом трьох років вчинення такого самого порушення, за яке на нього вже накладено штраф, - у розмірі шести тисяч неоподатковуваних мінімумів доходів громадян.
 
-3. До розповсюджувача застосовується штрафна санкція за недодержання ним умов зберігання продукції, що ним розповсюджується, якщо внаслідок цього продукція стала небезпечною, - у розмірі від двохсот п'ятдесяти до тисячі неоподатковуваних мінімумів доходів громадян, а за повторне протягом трьох років вчинення такого самого порушення, за яке на нього вже було накладено штраф, - у розмірі від п'ятисот до тисячі п'ятисот неоподатковуваних мінімумів доходів громадян.
+3. До розповсюджувача застосовуються адміністративно-господарські санкції у вигляді штрафу за недодержання ним умов зберігання продукції, що ним розповсюджується, якщо внаслідок цього продукція стала небезпечною, - у розмірі двох тисяч неоподатковуваних мінімумів доходів громадян, а за повторне протягом трьох років вчинення такого самого порушення, за яке на нього вже накладено штраф, - у розмірі чотирьох тисяч неоподатковуваних мінімумів доходів громадян.
 
-4. До виробника або розповсюджувача застосовуються штрафні санкції у разі:
+4. До виробника або розповсюджувача застосовуються адміністративно-господарські санкції у вигляді штрафу в разі:
 
-    1) невиконання або неповного виконання рішення органу державного ринкового нагляду про вжиття заходів із забезпечення безпечності продукції, визначених частинами першою - третьою статті 12 цього Закону, - у розмірі від тисячі п'ятисот до трьох тисяч неоподатковуваних мінімумів доходів громадян для виробників та у розмірі від трьохсот до тисячі неоподатковуваних мінімумів доходів громадян для розповсюджувачів;
+    1) невиконання або неповного виконання рішення органу державного ринкового нагляду про вжиття заходів із забезпечення безпечності продукції, визначених частинами першою - третьою статті 12 цього Закону, - у розмірі шести тисяч неоподатковуваних мінімумів доходів громадян для виробника та у розмірі чотирьох тисяч неоподатковуваних мінімумів доходів громадян для розповсюджувача;
 
-    2) невиконання або неповного виконання рішення органу державного ринкового нагляду про вжиття заходів із забезпечення безпечності продукції, визначених частиною четвертою статті 12 цього Закону, - у розмірі від двох тисяч п'ятисот до п'яти тисяч неоподатковуваних мінімумів доходів громадян для виробників та у розмірі від п'ятисот до тисячі п'ятисот неоподатковуваних мінімумів доходів громадян для розповсюджувачів.
+    2) невиконання або неповного виконання рішення органу державного ринкового нагляду про вжиття заходів із забезпечення безпечності продукції, визначених частиною четвертою статті 12 цього Закону, - у розмірі десяти тисяч неоподатковуваних мінімумів доходів громадян для виробника та у розмірі чотирьох тисяч неоподатковуваних мінімумів доходів громадян для розповсюджувача;
 
-5. Суб'єкт господарювання зобов'язаний сплатити штраф у п'ятнадцятиденний строк з дня отримання постанови про його накладення.
+    3) створення перешкод шляхом недопущення (вчинення протидії, загрози безпеці) до проведення перевірок характеристик продукції та невиконання встановлених цим Законом вимог посадових осіб, які здійснюють ринковий нагляд, - у розмірі десяти тисяч неоподатковуваних мінімумів доходів громадян.
+
+5. Суб’єкт господарювання зобов’язаний сплатити штраф у п’ятнадцятиденний строк з дня отримання постанови про його накладення.
 
     У разі несплати штрафу в зазначений строк він стягується в судовому порядку.
 
     Рішення про накладення штрафу у справах про порушення, передбачені цим Законом, може бути оскаржено до суду відповідно до закону.
 
-6. Сплата штрафу не звільняє виробника або розповсюджувача від відповідальності за шкоду, завдану споживачам (користувачам) продукції.
+6. Сплата штрафу не звільняє виробника або розповсюджувача від відповідальності за шкоду, заподіяну споживачам (користувачам) продукції.
 
-7. Порядок прийняття рішень про накладення штрафів визначається Законом України "Про державний ринковий нагляд і контроль нехарчової продукції".
+7. Порядок прийняття рішень про накладення штрафів визначається Законом України "Про державний ринковий нагляд і контроль нехарчової продукції.
 
 **Стаття 16.** Підстави звільнення від відповідальності за порушення вимог цього Закону
 
