--- a/Закони/Про_основні_засади_державного_нагляду_(контролю)_у_сфері_господарської_діяльності.md
+++ b/Закони/Про_основні_засади_державного_нагляду_(контролю)_у_сфері_господарської_діяльності.md
@@ -26,15 +26,15 @@
 
 Дія цього Закону поширюється на відносини, пов'язані зі здійсненням державного нагляду (контролю) у сфері господарської діяльності.
 
-Дія цього Закону не поширюється на відносини, що виникають під час здійснення заходів валютного контролю, митного контролю на кордоні, державного експортного контролю, контролю за дотриманням бюджетного законодавства, банківського нагляду, державного контролю за дотриманням законодавства про захист економічної конкуренції, державного нагляду (контролю) в галузі телебачення і радіомовлення.
+Дія цього Закону не поширюється на відносини, що виникають під час здійснення заходів валютного контролю, митного контролю на кордоні, державного експортного контролю, контролю за дотриманням бюджетного законодавства, банківського нагляду, державного контролю за дотриманням законодавства про захист економічної конкуренції, державного нагляду (контролю) в галузі телебачення і радіомовлення, державного ринкового нагляду та контролю нехарчової продукції.
 
 Контроль за додержанням ліцензіатами вимог ліцензійних умов здійснюється органами ліцензування у встановленому цим Законом порядку з урахуванням особливостей, визначених Законом України "Про ліцензування видів господарської діяльності".
 
 Заходи контролю здійснюються органами Державної фіскальної служби (крім митного контролю на кордоні), державного нагляду за дотриманням вимог ядерної та радіаційної безпеки (крім здійснення державного нагляду за провадженням діяльності з джерелами іонізуючого випромінювання, діяльність з використання яких не підлягає ліцензуванню), державного архітектурно-будівельного контролю (нагляду), державного нагляду у сфері господарської діяльності з надання фінансових послуг (крім діяльності з переказу коштів, фінансових послуг з ринку цінних паперів, похідних цінних паперів (деривативів) та ринку банківських послуг), державного нагляду та контролю за додержанням законодавства про працю та зайнятість населення у встановленому цим Законом порядку з урахуванням особливостей, визначених законами у відповідних сферах та міжнародними договорами, зокрема державного нагляду (контролю) в галузі цивільної авіації - з урахуванням особливостей, встановлених Повітряним кодексом України, нормативно-правовими актами, прийнятими на його виконання (Авіаційними правилами України), та міжнародними договорами у сфері цивільної авіації.
 
-Зазначені у частині четвертій цієї статті органи, що здійснюють державний нагляд (контроль) у встановленому цим Законом порядку з урахуванням особливостей, визначених законами у відповідних сферах та міжнародними договорами, зобов’язані забезпечити дотримання вимог статті 1, статті 3, частин першої, четвертої, шостої - восьмої, абзацу другого частини десятої, частин тринадцятої та чотирнадцятої статті 4, частин першої - четвертої статті 5, частини третьої статті 6, частин першої - четвертої та шостої статті 7, статей 9, 10, 19, 20, 21, частини третьої статті 22 цього Закону.
+Зазначені у частині четвертій цієї статті органи, що здійснюють державний нагляд (контроль) у встановленому цим Законом порядку з урахуванням особливостей, визначених законами у відповідних сферах та міжнародними договорами, зобов’язані забезпечити дотримання вимог статті 1, статті 3, частин першої, четвертої, шостої - восьмої, абзацу другого частини десятої, частин дванадцятої - чотирнадцятої статті 4, частини одинадцятої статті 4-1, частини третьої статті 6, частин першої - четвертої, шостої та десятої статті 7, статей 9, 10, 12, 19, 20, 21 цього Закону.
 
-Центральний орган виконавчої влади, що реалізує державну політику у сфері безпечності та окремих показників якості харчових продуктів та у сфері ветеринарної медицини, його територіальні органи зобов’язані забезпечити дотримання з урахуванням особливостей, визначених Законом України "Про державний контроль за дотриманням законодавства про харчові продукти, корми, побічні продукти тваринного походження, здоров’я та благополуччя тварин", виключно вимог частин першої, четвертої, шостої - сьомої, абзацу другого частини десятої, частин дванадцятої - чотирнадцятої статті 4, частин першої (крім вимоги щодо отримання погодження центрального органу виконавчої влади, що забезпечує формування державної політики у відповідній сфері державного контролю, або відповідного державного колегіального органу на проведення позапланового заходу) та третьої статті 6, частин першої - четвертої, шостої, восьмої - десятої статті 7, частин першої та другої статті 12, статей 13-18, 20, 21 цього Закону.
+Центральний орган виконавчої влади, що реалізує державну політику у сфері безпечності та окремих показників якості харчових продуктів та у сфері ветеринарної медицини, його територіальні органи зобов’язані забезпечити дотримання з урахуванням особливостей, визначених Законом України "Про державний контроль за дотриманням законодавства про харчові продукти, корми, побічні продукти тваринного походження, здоров’я та благополуччя тварин", виключно вимог частин першої, четвертої, шостої - сьомої, абзацу другого частини десятої, частин дванадцятої - чотирнадцятої статті 4, частин першої (крім вимоги щодо отримання погодження центрального органу виконавчої влади, що реалізує державну політику у відповідній сфері державного нагляду (контролю), або відповідного державного колегіального органу на проведення позапланового заходу) та третьої статті 6, частин першої - четвертої, шостої, восьмої - десятої статті 7, частин першої та другої статті 12, статей 13-18, 20, 21 цього Закону.
 
 Моніторинг призначених органів з оцінки відповідності і визнаних незалежних організацій здійснюється у встановленому цим Законом порядку з урахуванням особливостей, визначених Законом України "Про технічні регламенти та оцінку відповідності".
 
@@ -270,9 +270,9 @@
 
     * перевірка виконання суб’єктом господарювання приписів, розпоряджень або інших розпорядчих документів щодо усунення порушень вимог законодавства, виданих за результатами проведення попереднього заходу органом державного нагляду (контролю);
 
-    * звернення фізичної особи (фізичних осіб) про порушення, що спричинило шкоду її (їхнім) правам, законним інтересам, життю чи здоров’ю, навколишньому природному середовищу чи безпеці держави, з додаванням документів чи їх копій, що підтверджують такі порушення (за наявності). Позаплановий захід у такому разі здійснюється виключно за погодженням центрального органу виконавчої влади, що забезпечує формування державної політики у відповідній сфері державного нагляду (контролю), або відповідного державного колегіального органу.
+    * звернення фізичної особи (фізичних осіб) про порушення, що спричинило шкоду її (їхнім) правам, законним інтересам, життю чи здоров’ю, навколишньому природному середовищу чи безпеці держави, з додаванням документів чи їх копій, що підтверджують такі порушення (за наявності). Позаплановий захід у такому разі здійснюється територіальним органом державного нагляду (контролю) за наявністю погодження центрального органу виконавчої влади, що реалізує державну політику у відповідній сфері державного нагляду (контролю), або відповідного державного колегіального органу.
 
-    У такому разі перед початком здійснення позапланового заходу державного нагляду (контролю) посадові особи органів державного нагляду (контролю) зобов’язані пред’явити керівнику чи уповноваженій особі суб’єкта господарювання - юридичної особи, її відокремленого підрозділу, фізичній особі - підприємцю або уповноваженій ним особі, крім документів, передбачених цим Законом, додатково копію погодження центрального органу виконавчої влади, що забезпечує формування державної політики у відповідній сфері державного нагляду (контролю), або відповідного державного колегіального органу на проведення такої перевірки. Суб’єкти господарювання мають право не допускати посадових осіб органу державного нагляду (контролю) до здійснення заходів державного нагляду (контролю), якщо вони не пред’явили документи, передбачені цим абзацом;
+    У такому разі перед початком здійснення позапланового заходу державного нагляду (контролю) посадові особи територіального органу державного нагляду (контролю) зобов’язані пред’явити керівнику чи уповноваженій особі суб’єкта господарювання - юридичної особи, її відокремленого підрозділу, фізичній особі - підприємцю або уповноваженій ним особі, крім документів, передбачених цим Законом, додатково копію погодження центрального органу виконавчої влади, що реалізує державну політику у відповідній сфері державного нагляду (контролю), або відповідного державного колегіального органу на проведення такої перевірки. Суб’єкти господарювання мають право не допускати посадових осіб територіального органу державного нагляду (контролю) до здійснення заходів державного нагляду (контролю), якщо вони не пред’явили документи, передбачені цим абзацом
 
     * неподання суб’єктом господарювання документів обов’язкової звітності за два звітні періоди підряд без поважних причин або без надання письмових пояснень про причини, що перешкоджали поданню таких документів;
 
@@ -524,7 +524,7 @@
 
 * органом державного нагляду (контролю) не була затверджена та оприлюднена на власному офіційному веб-сайті уніфікована форма акта, в якій передбачається перелік питань залежно від ступеня ризику;
 
-* у передбачених законом випадках посадові особи не надали копію погодження центрального органу виконавчої влади, що забезпечує формування державної політики з питань державного нагляду (контролю) у сфері господарської діяльності, або відповідного державного колегіального органу на здійснення позапланового заходу державного нагляду (контролю);
+* у передбачених законом випадках посадові особи не надали копію погодження центрального органу виконавчої влади, що реалізує державну політику у відповідній сфері державного нагляду (контролю), або відповідного державного колегіального органу на здійснення позапланового заходу державного нагляду (контролю)
 
 * бути присутнім під час здійснення заходів державного нагляду (контролю), залучати під час здійснення таких заходів третіх осіб;
 
