--- a/Кодекси/Господарський_кодекс_України.md
+++ b/Кодекси/Господарський_кодекс_України.md
@@ -3345,6 +3345,8 @@
 
 2. Дія цієї статті не поширюється на штрафні санкції, розмір і порядок стягнення яких визначені Податковим кодексом України, законами України "Про валюту і валютні операції" "Про банки і банківську діяльність" та іншими законами, контроль за дотриманням яких покладено на органи доходів і зборів.
 
+3. Дія цієї статті не поширюється на адміністративно-господарські санкції, передбачені законами України "Про державний ринковий нагляд і контроль нехарчової продукції" та "Про загальну безпечність нехарчової продукції".
+
 ### Глава 28
 ### ВІДПОВІДАЛЬНІСТЬ СУБ'ЄКТІВ ГОСПОДАРЮВАННЯ ЗА ПОРУШЕННЯ АНТИМОНОПОЛЬНО-КОНКУРЕНТНОГО ЗАКОНОДАВСТВА
 
