--- a/Конституція.md
+++ b/Конституція.md
@@ -483,7 +483,7 @@
 
 Повноваження народних депутатів України починаються з моменту складення присяги.
 
-**Стаття 80.** Народні депутати України не несуть юридичної відповідальності за результати голосування або висловлювання у парламенті та його органах, за винятком відповідальності за образу чи наклеп
+**Стаття 80.** Народні депутати України не несуть юридичної відповідальності за результати голосування або висловлювання у парламенті та його органах, за винятком відповідальності за образу чи наклеп.
 
 **Стаття 81.** Повноваження народних депутатів України припиняються одночасно з припиненням повноважень Верховної Ради України.
 
